# pax

./: Makefile  README.md  pax.spec
src/: ChangeLog  Makefile.am  Makefile.in  NEWS  README  THANKS  config.h.in  configure  configure.in  pax.spec
src/lib/: Makefile.am  Makefile.in  bsdfunc.h  fts.c  fts.h  strlcpy.c  strmode.c  vis.c
src/src/: Makefile.am  Makefile.in  ar_io.c  ar_subs.c  buf_subs.c  cache.c  cpio.c  extern.h  file_subs.c  ftree.c  gen_subs.c  getoldopt.c  options.c  pat_rep.c  pax.1  pax.c  sel_subs.c  tables.c  tar.c  tty_subs.c
