#
# Copyright (c) 2001, 2003 Thorsten Kukuk <kukuk@suse.de>
#
# Process this file with automake to produce Makefile.in.

AUTOMAKE_OPTIONS = 1.7 gnits

CLEANFILES = *~

noinst_LIBRARIES = libbsdfunc.a
noinst_HEADERS = vis.h bsdfunc.h fts.h

AM_CFLAGS = @EXTRA_CFLAGS@

libbsdfunc_a_SOURCES = vis.c strlcpy.c strmode.c fts.c
